More steps towards a Fennel lib for Neovim

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Fennel"]
-	path = Fennel
+	path = submodules/Fennel
 	url = https://github.com/bakpakin/Fennel.git
+[submodule "submodules/inspect.lua"]
+	path = submodules/inspect.lua
+	url = https://github.com/kikito/inspect.lua.git
