--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/inspect.lua"]
 	path = submodules/inspect.lua
 	url = https://github.com/kikito/inspect.lua.git
+[submodule "submodules/nvim.lua"]
+	path = submodules/nvim.lua
+	url = https://github.com/norcalli/nvim.lua.git
