--- a/.lvimrc
+++ b/.lvimrc
@@ -1,3 +1,3 @@
 let &runtimepath = &runtimepath.",".expand("<sfile>:p:h").",".expand("<sfile>:p:h")."/test"
 nmap <localleader>a <Plug>(AniseedEval)
-vmap <localleader>a <Plug>(AniseedEvalVisual)
+vmap <localleader>a <Plug>(AniseedEvalSelection)
