install is not a package

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,5 @@ jobs:
       - image: archlinux/base
     steps:
       - checkout
-      - run: pacman -Sy --noconfirm install make neovim
+      - run: pacman -Sy --noconfirm make neovim
       - run: make test
