Enhance Aniseed bootstrap script
Changes:
1. Prints messages for each operation.
2. Renames subdirs & files names to match root dir name.
3. Finds "example" keyword in files and replace it with root dir name.
4. Omits some messages/logs.
5. Prints tree of the changed directory.
6. Embeds aniseed into runtime without user intervention.

--- a/seed/Makefile
+++ b/seed/Makefile
@@ -8,11 +8,8 @@ deps:
 compile:
 	rm -rf lua
 	deps/aniseed/scripts/compile.sh
-	## Uncomment and set CHANGEME to your project prefix if you need access to
-	## Aniseed at runtime, instead of just compile time.
-	## If your project modules are like myplugin.some-thing, you'd use myplugin
-	## in place of CHANGEME.
-	# deps/aniseed/scripts/embed.sh aniseed CHANGEME
+	## comment out if you don't need access to Aniseed at runtime.
+	deps/aniseed/scripts/embed.sh aniseed example
 
 test:
 	rm -rf test/lua
