--- a/seed/Makefile
+++ b/seed/Makefile
@@ -7,10 +7,12 @@ deps:
 
 compile:
 	rm -rf lua
-	deps/aniseed/scripts/compile.sh
 
 	# Remove this if you only want Aniseed at compile time.
 	deps/aniseed/scripts/embed.sh aniseed example
+
+	# Also remove this embed prefix if you're not using Aniseed inside your plugin at runtime.
+	ANISEED_EMBED_PREFIX=example deps/aniseed/scripts/compile.sh
 
 test:
 	rm -rf test/lua
